Apply OpenRewrite UpgradeToJava21 recipe